[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/test/localization_test.gd" id="1"]

[node name="LocalizationTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Localization System Test"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="CurrentLocale" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Current Locale: "

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="JapaneseButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "日本語"

[node name="KoreanButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "한국어"

[node name="EnglishButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "English"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="TestLabel1" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Test 1: "

[node name="TestLabel2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Test 2: "

[node name="TestLabel3" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Test 3: "

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="StatsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Stats: "

[connection signal="pressed" from="VBoxContainer/HBoxContainer/JapaneseButton" to="." method="_on_japanese_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/KoreanButton" to="." method="_on_korean_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/EnglishButton" to="." method="_on_english_pressed"]
